--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "jspac": "^1.0.0",
     "typescript": "^5.2.2"
   },
-  "name": "intcode",
+  "name": "encoden",
   "version": "0.0.0",
   "scripts": {
     "dev": "jspac dev",
-    "build": "jspac build"
+    "build": "jspac build",
+    "lab": "nodemon ./src/_lab.ts"
   },
   "main": "./dist-cjs/index.cjs",
   "module": "./dist-mjs/index.mjs",
